k8s/namespaces/development/forgejo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
  namespace: development
  labels:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/managed-by: flux
  annotations:
    goldilocks.fairwinds.com/vpa-resource-policy: >
      { "containerPolicies": [
      { "containerName": "forgejo",
      "minAllowed": { "cpu": "50m", "memory": "512Mi" },
      "maxAllowed": { "cpu": "2", "memory": "4Gi" },
      "controlledValues": "RequestsOnly" } ] }
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: forgejo
      app.kubernetes.io/managed-by: flux
  template:
    metadata:
      labels:
        app.kubernetes.io/name: forgejo
        app.kubernetes.io/managed-by: flux
    spec:
      automountServiceAccountToken: false
      containers:
        - name: forgejo
          # renovate: datasource=docker depName=codeberg.org/forgejo/forgejo
          image: codeberg.org/forgejo/forgejo:16@sha256:cf5f5ae6acf2ababca0ee3d255705b83a47f35b25e07fc931d694d60664053fe
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
            - containerPort: 22
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: "100m"
              memory: "1Gi"
              ephemeral-storage: "10Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
              ephemeral-storage: "20Gi"
          volumeMounts:
            - name: data
              mountPath: /data
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: forgejo-data
        - name: tmp
          emptyDir: {}
